# server-core

./: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md
cmake/: dependencies.cmake
src/: CMakeLists.txt  main.c  main.fly
